Now creatures can search for food and eat it, also they have hunger, and they can starve to death. I added number of creatures counter.